# easyai-client

./: .env.example  .gitignore  GIT_INSTALL.md  README.md  config.yaml  install.cmd  install.ps1  pyproject.toml  setup.py
src/pyai_assistant/: __init__.py  client_services.py  config.py  presets.py  types.py
src/pyai_assistant/agent/: __init__.py  prompts.py  session.py
src/pyai_assistant/cli/: client.py  model_setup.py  pet.py  secret_input.py  setup.py
src/pyai_assistant/providers/: __init__.py  base.py  factory.py  http.py  ollama.py  openai_compatible.py  server_api.py
src/pyai_assistant/runtime/: __init__.py  computer.py  downloader.py  executor.py  updater.py
src/pyai_assistant/workspace/: __init__.py  manager.py
